[package]
name = "rust-login-axum"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "authe"
path = "src/main.rs"

[profile.release]
opt-level = "z" 
# opt-level = "s" 
lto = true

[dependencies]
axum = { version = "0.8.8", features = ["json"] }
dotenvy = "0.15.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "macros", "uuid"] }
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["fmt", "env-filter"] }
uuid = { version = "1.21.0", features = ["serde", "v4"] }

# hash de senha segura
argon2 = { version = "0.5", features = ["std"] }
password-hash = "0.5"
headers = "0.4.1"

# JWT
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
rand = "0.8"
chrono = "0.4.43"
